# Skillshare-sync

./: .gitignore  README.md  yt_dlp_bot.py
.github/workflows/: build-native.yml
skillshare-app/: main.js  package-lock.json  package.json  preload.js
skillshare-native/: CMakeLists.txt  README.md
skillshare-native/include/: app_window.h  downloader.h  webview_handler.h
skillshare-native/resources/: app.rc  inject.js
skillshare-native/src/: app_window.cpp  downloader.cpp  main.cpp  webview_handler.cpp
